# mtree

./: .editorconfig  .gitignore  README.md  build.sh
data/: 1000.csv  1000_create_indexes.sql  1000_create_tables.sql  1000_float.csv  1000_measure.sql  2000_int.csv  array_test.csv  array_test.sql  cousineSong.sql  fingerprintData_less  fingerprint_create_indexes.sql  fingerprint_create_tables.sql  fingerprint_data_10  fingerprint_data_1000  fingerprint_data_10000  fingerprint_data_array_10  fingerprint_measure.sql  float4.csv  float4.expected  float4.sql  float4_array.csv  float4_array.expected  float4_array.sql  float_measure.sql  generate_random.py  int8.csv  int8.expected  int8.sql  int8_array.csv  int8_array.expected  int8_array.sql  int8_array_test.csv  int8_array_test.sql  int8_measure.sql  measure.sql  millionSong.sql  mtreeOrderbyhiba.sql  mtreeOrderbyhibaGG.sql  mtreeTextArrayTest.sql  remove_magic_numbers.sql  (+9 more)
docker/: Dockerfile
documentation/: DEVELOPMENT.md  NOTES.md  README.md  TODO.md  TYPES.md  commands.sh  commands.sql  generic_mtree.md  links  todo.md
source/: CMakeLists.txt  mtree.c  mtree.control  mtree.sql  mtree_float.c  mtree_float.h  mtree_float_array.c  mtree_float_array.h  mtree_float_array_util.c  mtree_float_array_util.h  mtree_float_util.c  mtree_float_util.h  mtree_gist--1.0.sql  mtree_gist.c  mtree_gist.h  mtree_int32.c  mtree_int32.h  mtree_int32_array.c  mtree_int32_array.h  mtree_int32_array_util.c  mtree_int32_array_util.h  mtree_int32_util.c  mtree_int32_util.h  mtree_int64.c  mtree_int64.h  mtree_int64_util.c  mtree_int64_util.h  mtree_int8.c  mtree_int8.h  mtree_int8_array.c  mtree_int8_array.h  mtree_int8_array_util.c  mtree_int8_array_util.h  mtree_int8_util.c  mtree_int8_util.h  mtree_text.c  mtree_text.h  mtree_text_array.c  mtree_text_array.h  mtree_text_array_util.c  (+5 more)
source/generic/: mtree.control  mtree_gist--1.0.sql  mtree_gist.c  mtree_gist.h  mtree_gist_tmp.c  mtree_text.c  mtree_utils_var.c  mtree_utils_var.h  mtree_utils_var_tmp.c
source/generic/data/: text.data
source/generic/sql/: text.sql
(+105 files in other folders)
